Ch-ch-ch-ch-changes

--- a/G&T/gat.tex
+++ b/G&T/gat.tex
@@ -67,7 +67,7 @@
 \indent
 3. $d(x, y)\leq d(x, z)+d(z, y)$. \\
 
-Пара $(X, d)$, где $d$ - метрика в $X$, называется \textit{метрическим пространством}. \\
+Пара $(X, d)$, где $d$ - метрика в $X$, называется \hypertarget{n2}{\textit{метрическим пространством}}. \\
 
 \begin{theorem}
 (Прямое произведение матриц). Пусть $(X, d_X)$ и $(Y, d_Y)$ - метрические пространства. Тогда функция
@@ -107,8 +107,8 @@
         \overline{B_r} (a) = D_r &(a) = \{x \in X: d(a,x) \leq r\}. \\
     \end{aligned}
     \]
-    называются, соответственно, открытым шаром (или просто шаром) и замкнутым шаром пространства $\left(X,d\right)$ с центром в точке $a$ и радиусом $r$.
-    \item Пусть $\left(X, d\right)$ --- метрическое пространство, $A \subseteq X$. Множество $A$ называется открытым в метрическом пространстве, если
+    называются, соответственно, открытым \hypertarget{n3}{шаром} (или просто шаром) и замкнутым шаром пространства $\left(X,d\right)$ с центром в точке $a$ и радиусом $r$.
+    \item Пусть $\left(X, d\right)$ --- метрическое пространство, $A \subseteq X$. Множество $A$ называется \hypertarget{n4}{открытым} в метрическом пространстве, если
     \[
         \forall a \in A \exists r > 0: B_r(a) \subseteq A.
     \]
@@ -155,7 +155,7 @@
 
 \textbf{Топологические пространства. Замкнутые множества, их объединения и пересечения. Замкнутость канторова множества.}\\
 
-\textbf{Определение:} Пусть $X$ - произвольное множество, и множество $\Omega \subset \rho (X)$ обладает следующими свойствами:
+\textbf{Определение:} Пусть $X$ - \hypertarget{n5}{произвольное} множество, и множество $\Omega \subset \rho (X)$ обладает следующими свойствами:
 \begin{itemize}
   \item $\emptyset, X \in \Omega$
   \item Объединение любого набора множеств из $\Omega$ также лежит в $\Omega$
@@ -167,7 +167,7 @@
  \item Множество $X$ с выделенной топологической структурой называется $\emph{топологическим пространством}$
  \item Элементы множества $\Omega$ называются $\emph{открытыми множествами}$ пространства $(X, \Omega)$
 \end{itemize}
-\textbf{Определение:} Множество $F \subseteq X$ называется \textit{замкнутым} в $X$, если $X \backslash F$ открыто
+\textbf{Определение:} Множество $F \subseteq X$ \hypertarget{n6}{называется} \textit{замкнутым} в $X$, если $X \backslash F$ открыто
 \\
 \begin{theorem}
     В произвольном топологическом пространстве $X$:
@@ -224,7 +224,7 @@
     
 \textbf{Внутренность, замыкание и граница множества: определение и свойства включения, объединения, пересечения.} \\
 
-Пусть $(X, \Omega)$ - топологическое пространство и $A\subseteq X$. \textit{Внутренностью} множества $A$ называется объединение всех открытых множество, содержащихся в $A$, т. е.:
+Пусть $(X, \Omega)$ - топологическое пространство и $A\subseteq X$. \textit{Внутренностью} \hypertarget{n7}{множества} $A$ называется объединение всех открытых множество, содержащихся в $A$, т. е.:
 \[
     \text{Int} A = \bigcup_{U\in \Omega, U\subseteq A} U.
 \]
@@ -250,7 +250,7 @@
 
 \end{itemize}
 
-Пусть $(X, \Omega)$ - топологическое пространство и $A\subseteq X$. \textit{Замыканием} множества $A$ называется пересечение всех замкнутых множество, содержащих $A$, т. е.:
+Пусть $(X, \Omega)$ - топологическое пространство и $A\subseteq X$. \textit{Замыканием} \hypertarget{n8}{множества} $A$ называется пересечение всех замкнутых множество, содержащих $A$, т. е.:
 \[
     \text{Cl} A = \bigcap_{X\backslash V\in \Omega, V\supseteq A} V.
 \]
@@ -270,7 +270,7 @@
 
 \end{itemize}
 
-Пусть $(X, \Omega)$ - топологическое пространство и $A\subseteq X$. Тогда \textit{границей} множества $A$ называется разность его замыкания и внутренности: $\text{Fr}A = \text{Cl}A\backslash \text{Int}A$. \\
+Пусть $(X, \Omega)$ - топологическое пространство и $A\subseteq X$. Тогда \textit{границей} \hypertarget{n9}{множества} $A$ называется разность его замыкания и внутренности: $\text{Fr}A = \text{Cl}A\backslash \text{Int}A$. \\
 
 Свойства:
 \begin{itemize}
@@ -288,9 +288,9 @@
 
 \textbf{ Расположение точки относительно множества: внутренние и граничные точки, точки прикосновения, предельные и изолированные точки. Внутренность, замыкание и граница множества: из каких точек они состоят.}
 \begin{itemize}
-    \item Определения($A$ - множество в топологическом пространстве):
+    \item \hypertarget{n10}{Определения}($A$ - множество в топологическом пространстве):
     \begin{enumerate}
-        \item Окрестностью точки топологического пространства называется любое открытое множество, содержащее эту точку.
+        \item \hypertarget{n11}{Окрестностью} точки топологического пространства называется любое открытое множество, содержащее эту точку.
         \item Точка называется внутренней для $A$, если некоторая её окрестность содержится в $A$.
         \item Точка называется точкой прикосновения для $A$, если любая её окрестность пересекается с $A$.
         \item Точка называется граничной для $A$, если любая её окрестность пересекается с $A$ и с дополнением $A$
@@ -327,7 +327,7 @@
 
 \textbf{Cравнение метрик и топологий (грубее/тоньше). Липшицево эквивалентные метрики.}\\
 
-\textbf{Определение: } Топология $\Omega_1$ \textit{слабее (грубее)} топологии $\Omega_2$ на $X$, если $\Omega_1 \subseteq \Omega_2$. В этом случае топология $\Omega_2$ \textit{сильнее (тоньше)} топологии $\Omega_1$
+\textbf{Определение: } Топология $\Omega_1$ \textit{слабее (грубее)} \hypertarget{n12}{топологии} $\Omega_2$ на $X$, если $\Omega_1 \subseteq \Omega_2$. В этом случае топология $\Omega_2$ \textit{сильнее (тоньше)} топологии $\Omega_1$
 \\
 
 \textbf{Пример: } Из всех топологичских структур на $X$ антидискретная топология - самая грубая; дискретная топология - самая тонкая.
@@ -346,7 +346,7 @@ $"\Leftarrow"$ $U$ открыто в $d_1$ $\Rightarrow$ $\forall a \in U \exist
 \begin{proof} $d_1 \leq d_2 \Rightarrow \forall r > 0 \forall a \in X B_r^{d_2}(a) \subseteq B_r^{d_1}(a) \Longleftrightarrow$ топология $d_1$ грубее топологии $d_2$
 \end{proof}
 
-\textbf{Определение:} Две метрики в одном множестве называются эквивалентными, если они порождают одну и ту же топологию.
+\textbf{Определение:} Две метрики в одном множестве называются \hypertarget{n13}{эквивалентными}, если они порождают одну и ту же топологию.
 \\
 
 \textbf{Лемма: } Пусть $(X, d)$ - метрическое пространство. Тогда для любого $C>0$ функция $C \cdot d$ - тоже метрика, причём эквивалентная метрике $d$.
@@ -359,7 +359,7 @@ $"\Leftarrow"$ $U$ открыто в $d_1$ $\Rightarrow$ $\forall a \in U \exist
 \begin{proof} По лемме $d_2$ и $C \cdot d_2$ эквивалентны, а по следствию 1 $d_1$ грубее $C \cdot d_2$
 \end{proof}
 
-\textbf{Определение: } Метрики $d_1, d_2$ называются \textit{липшицево эквивалентными}, если существуют $c, C > 0$ такие, что для любых $a, b \in X$ $c \cdot d_2(a, b) \leq d_1(a, b) \leq C \cdot d_2(a, b)$
+\textbf{Определение: } Метрики $d_1, d_2$ \hypertarget{n14}{называются} \textit{липшицево эквивалентными}, если существуют $c, C > 0$ такие, что для любых $a, b \in X$ $c \cdot d_2(a, b) \leq d_1(a, b) \leq C \cdot d_2(a, b)$
 \\
 \begin{theorem}
 Если метрики $d_1$ и $d_2$ липшицево эквивалентны, то они эквивалентны.
@@ -379,7 +379,7 @@ $"\Leftarrow"$ $U$ открыто в $d_1$ $\Rightarrow$ $\forall a \in U \exist
 \begin{proof} Нетрудно проверить, что $\max\{|x_1-x_2|, |y_1-y_2|\}<\sqrt{(x_1-x_2)^2+(y_1-y_2)^2} < 2 \cdot \max\{|x_1-x_2|, |y_1-y_2|\}$, поэтому первая и вторая метрики эквивалентны по предыдущей теореме. Аналогично, $\max\{|x_1-x_2|, |y_1-y_2|\}< |x_1-x_2|+|y_1-y_2| < 2 \cdot \max\{|x_1-x_2|, |y_1-y_2|\}$, поэтому вторая и третья метрики также эквивалентны.
 \end{proof}
 
-\textbf{Определение: } Топологическое пространство называется \textit{метризуемым}, если существует метрика, порождающая его топологию.
+\textbf{Определение: } Топологическое пространство \hypertarget{n15}{называется} \textit{метризуемым}, если существует метрика, порождающая его топологию.
 \\
 
 \textbf{Примеры: } 
@@ -397,7 +397,7 @@ $"\Leftarrow"$ $U$ открыто в $d_1$ $\Rightarrow$ $\forall a \in U \exist
 
 \textbf{База топологии: два определения и их эквивалентность. Критерий базы}\\
 
-\textit{Базой} топологии $\Omega$ называется такой набор $\Sigma$ открытых множеств, что всякое открытое множество представимо в виде объединения множество из $\Sigma$.
+\textit{Базой} \hypertarget{n16}{топологии} $\Omega$ называется такой набор $\Sigma$ открытых множеств, что всякое открытое множество представимо в виде объединения множество из $\Sigma$.
 
 \[
     \Omega \supseteq \Sigma \text{ - база } \Leftrightarrow \forall U \in \Omega \exists \Lambda \subseteq \Sigma : U = \bigcup_{W\in \Lambda} W.
@@ -417,7 +417,7 @@ $"\Leftarrow"$ $U$ открыто в $d_1$ $\Rightarrow$ $\forall a \in U \exist
 \end{proof}
 
 \begin{theorem}
-    (Критерий базы). Пусть $X$ - произвольное множество и $\Sigma = \{ A_i \}_{i\in I}$ - его покрытие. $\Sigma$ - база некоторой топологии $\Longleftrightarrow \forall A_s, A_m \in \Sigma \exists J_{s, m}\subseteq I:A_s\cap A_m = \bigcup_{j\in J_{s, m}}A_j$.
+    (\hypertarget{n17}{Критерий} базы). Пусть $X$ - произвольное множество и $\Sigma = \{ A_i \}_{i\in I}$ - его покрытие. $\Sigma$ - база некоторой топологии $\Longleftrightarrow \forall A_s, A_m \in \Sigma \exists J_{s, m}\subseteq I:A_s\cap A_m = \bigcup_{j\in J_{s, m}}A_j$.
 \end{theorem}   
 
 \begin{proof}
@@ -440,7 +440,7 @@ $"\Leftarrow"$ $U$ открыто в $d_1$ $\Rightarrow$ $\forall a \in U \exist
 \textbf{База топологии в точке. Связь между базой топологии и базами в точках. Предбаза топологии, как из неё получается база.}\\
     \begin{itemize}
     \item 
-    Пусть $\left(X, \Omega\right)$ --- топологическое пространство, $a \in X$ и $\Lambda \subseteq \Omega. \Lambda$ называется базой топологии(базой окерестностей) в точке $a$, если:
+    Пусть $\left(X, \Omega\right)$ --- топологическое пространство, $a \in X$ и $\Lambda \subseteq \Omega. \Lambda$ называется базой топологии (базой окерестностей) в точке $a$, если:
     \begin{enumerate}
         \item $\forall U \in \Lambda: a \in U;$ 
         \item $\forall U_\varepsilon (a) \exists V_a \in \Lambda: V_a \subseteq U_\varepsilon (a).$
@@ -457,7 +457,7 @@ $"\Leftarrow"$ $U$ открыто в $d_1$ $\Rightarrow$ $\forall a \in U \exist
     
     Множество $\Sigma_a = \left\{B_r(a): r \in \mathbb R_+ \right\}$ является базой метрического пространства в точке а.
     \item
-    Набор $\Delta$ открытых множеств топологического пространства $\left(X, \Omega \right)$ называется предбазой топологии, если $\Omega$ --- наименьшая по включению топология, содержащая $\Delta$.
+    Набор $\Delta$ открытых множеств топологического пространства $\left(X, \Omega \right)$ называется \textit{предбазой} \hypertarget{n18}{топологии}, если $\Omega$ --- наименьшая по включению топология, содержащая $\Delta$.
     
     \begin{theorem}
         Любой набор $\Delta$ подмножеств множества $X$ является предбазой некоторой топологии на $X$.
@@ -953,8 +953,43 @@ $X = \Pi_{i\in I}X_i$ - произвеиение топологических п
     [
     Быстрый список для особо заебавшегося поиска.
     ]
+
+    \hyperlink{n16}{база}\
     
-    \hyperlink{n1}{метрика}
+    \hyperlink{n7}{внутренность}\
+
+    \hyperlink{n9}{граница}\
+
+    \hyperlink{n8}{замыкание}\
+
+    \hyperlink{n17}{критерий (базы)}\
+    
+    \hyperlink{n1}{метрика}\
+
+    \hyperlink{n6}{множество (замкнутое)}\
+
+    \hyperlink{n4}{множество (открытое)}\
+
+    \hyperlink{n11}{окрестность}\
+
+    \hyperlink{n18}{предбаза}\
+
+    \hyperlink{n2}{пространство (метрическое)}\
+
+    \hyperlink{n15}{пространство (метризуемое)}\
+
+    \hyperlink{n5}{топология}\
+
+    \hyperlink{n12}{топология (сильнее, слабее,...)}\
+
+    \hyperlink{n10}{точки (прикосновения, внутренние,...)}\
+
+    \hyperlink{n3}{шар}\
+
+    \hyperlink{n13}{эквивалентность}\
+
+    \hyperlink{n14}{эквивалентность (по липшицу)}\
+    
 
     \end{multicols}
 
