Ch-ch-ch-ch-changes

--- a/G&T/gat.tex
+++ b/G&T/gat.tex
@@ -45,7 +45,7 @@
 
 \newpage
 
-\hypertarget{t1}{Table of contents}
+\hypertarget{t1}{Честно говоря, ненависть} к этой вашей топологии просто невообразимая.
 \tableofcontents
 
 \newpage
@@ -943,11 +943,11 @@ $X = \Pi_{i\in I}X_i$ - произвеиение топологических п
 
 \newpage
 
-\hypertarget{t2}{Table of objects}
+\hypertarget{t2}{И в заключение...}
 
 
 
-\section{Пофамильный указатель всего на свете}
+\section{Пофамильный указатель всех мразей}
 
 \begin{multicols}{2}
     [
