--- a/algebruh/algebra.tex
+++ b/algebruh/algebra.tex
@@ -236,11 +236,144 @@
     Пусть $d$ - какой-то делитель $p$, что эквивалентно равенству $p=da$ для какого-то $a$. Проверим, что либо $d\sim 1$, либо $d\sim p$. Раз $p$ - простой, то либо он делит $d$, либо он делит $a$. Если первое, что сразу $d\sim p$.Если второе, перепишем в виде $da=p\vert a$. Это то же самое, что $bda=a$ для некоторого $b$. Здесь либо $a=0$, то тогда $p=o$, что невозможно по определению простого, либо мы можем сократить на $a$ и получим $bd=1$, тогда $d$ ассоциирован с 1.
 \end{proof}
 
+Смотрите ткаже \hyperlink{t1}{немного добавки} про простые и неприводимые после введения ОГИ.
+
 \resetall
 
 \subsection{Идеалы, главные идеалы. Евклидово кольцо как кольцо главных идеалов}
 
+\begin{defn}
+    Подмножество 
+    \[
+        (a_1, \dots, a_n):=\{a_1x_1+\dots+a_nx_n\vert x_i\in R \text{ для всех } i\}
+    \]
+    коммутативного кольца $R$ называется \hypertarget{n9}{\textcolor{red}{\textit{идеалом}}}, порождённым $a_1, \dots, a_n$.
+\end{defn}
+
+\begin{defn}
+    Подкольцо $I$ кольца $R$ называется \textit{левым идеалом}, если оно замкнуто относительно домнодения слева на элементы кольца: $RI=I$. Соответственно, также различают \textit{правые} и \textit{двусторонние идеалы}. 
+\end{defn}
+
+Также идеал можно задать следующими свойствами:
+\begin{itemize}
+    \item $\forall x, y\in I \Longrightarrow x+y\in I$;
+    \item $\forall x\in I, \forall r\in R \Longrightarrow xr\in I$;
+    \item $-x\in I$;
+    \item $I$ - непустой.
+\end{itemize}
+
+\begin{defn}
+    Идеал называется \textit{главным}, если он порождён одним элементом.
+\end{defn}
+
+\begin{defn}
+    \hypertarget{n10}{\textcolor{red}{\textit{Область главных идеалов}}} - область целостности, в который каждый идеал главный.
+\end{defn}
+
+\begin{theorem}
+    (Евклидовы кольца $\subset$ ОГИ). Пусть $R$ - евклидово кольцо, $I\unlhd R$ - идеал. Тогда $I$ - главный.
+\end{theorem}
+
+\begin{proof}
+    Найдём элемент, который порождает идеал $I$.\
+        
+    Вырожденный случай: если $I=\{0\}$, тогда $I=(0)$.\
+
+    Иначе возьмём $d\in I\backslash 0$ с минимальной нормой (по принципу индукции мы можем это сделать). Хотим показать, что $I=(d)$. Покажем это в обе стороны.\
+
+    \textcolor{red}{$\Rightarrow$} Легко видеть, что $(d) \subset I$.\
+
+    \textcolor{red}{$\Leftarrow$} Пусть $a \in I$, тогда поделим $a$ на $b$ с остатком: $a=bd+r$. Предположим, $r\neq 0$, $N(r)<N(d)$. Выразим $r$ линейной комбинацией $a\in I$ и $d \in I$: $r=a-bd\in I$ - противоречие с минимальностью нормы $d$. Значит, $r=0$, а тогда $a=bd\in (d)$.
+\end{proof}
+
+Теперь \hypertarget{t1}{немного добавки} про простые и неприводимые, на всякий случай.\\
+
+\begin{lemma}
+    (Неприводимые $\subset$ простые в ОГИ). Пусть $p$ - неприводимый в области главных идеалов. Тогда $p$ - простой.
+\end{lemma}
+
+\begin{proof}
+    Пусть $p\vert ab$, хотим показать, что $p\vert a \vee p\vert b$. Воспользуемся тем, что мы в области главных идеалов: $(p,a)=(d)$, где $d:=\gcd (a, p)$, а тогда $px+ay=d$ для каких-то $x, y$. $d\vert p$, воспользуемся неприводимостью $p$: либо $d\sim p$, либо $d\sim 1$.\
+    
+    В первом случае $p\vert d$, тогда $p\vert d\vert a$.\
+
+    Во втором случае можно после домножения на обратимые считать, что $px+ay=1$. Потом домножим на $b:pbx+aby=b$. $p$ явно делит первое слагаемое, ровно как и второе (по предположению). Значит, $p\vert b$.\
+
+    В любом случае, приходим к желаемому.
+\end{proof}
+
+\resetall
+
 \subsection{Основная теорема арифметики}
+
+Сначала опять немного информации, которая к билету не относится, но к нему логично подводит.\
+
+\begin{defn}
+    Коммутативное кольцо с единицей $R$ удовлетворяет \hypertarget{n11}{\textcolor{red}{\textit{условию обрыва возрастающих цепей главных идеалов}}} или, что то же самое, является \textit{нетёровым кольцом}, если не существует бесконечной строго возрастающей цепочки главных идеалов $(d_1)\subsetneq (d_2)\subsetneq \dots$ Иначе говоря, бесконечной цепочки $\dots \vert d_2\vert d_1$, где все $d_i$ попарно не ассоциированы.
+\end{defn}
+
+\begin{theorem}
+    (ОГИ $\subset$ нетёровы кольца). Область главных идеалов удовлетворяет условию обрыва возрастающих цепей главных идеалов (далее - УОВЦГИ).
+\end{theorem}
+
+\begin{proof}
+    Предположим, что нашлась такая бесконечная цепочка $\{d_i\}$. Объединим $I:=\bigcup_{i=0}^\infty (d_i)$.\
+
+    Покажем, что $I$ - идеал. $0\in I$. Пусть $u\in (d_i)$ и $v\in (d_j)$, где $i\leq j$, проверяем остальные условия. $u+v\in(d_j)$, потому что $u\in (d_j)$, с остальными аналогично, не очень сложно.\ 
+
+    Вспомним, что мы находимся в ОГИ, то есть, каждый идеал главный. Пусть $d$ - \textit{генератор} $I$ ($I=(d)$). Любой $(d_i)$ строго содержится в $(d_{i+1})$, а этот содержится в $(d):(d_i)\subsetneq (d_{i+1})\subset (d)$, значит, любой из $\{(d_i)\}$ строго содержится в $(d)$. Но сам генератор $d$ тоже должен принадлежать какому-то из $\{(d_i)\}$, а значит, на каком-то моменте $(d)\subset (d_i)$. Противоречие.
+\end{proof}
+
+\begin{defn}
+    Кольцо называется \hypertarget{n12}{\textcolor{red}{\textit{факториальным}}}, если одновременно выполнено:
+    \begin{itemize}
+        \item $R$ - область;
+        \item любой неприводимый элемент $R$ - простой;
+        \item $R$ - нетёрово.
+    \end{itemize}
+\end{defn}
+
+\begin{exl}
+    Как мы уже знаем, ОГИ $\subset$ факториальные кольца.
+\end{exl}
+
+А теперь, к основному.\\
+
+\begin{theorem}
+    (\hypertarget{n13}{\textcolor{red}{\textit{Основная теорема арифметики}}}). Пусть $R$ - факториальное кольцо.\ 
+
+    Тогда любой элемент $x\in R$, если он не нуль и не обратимый, представляется в виде $r=p_1\dots p_n$, где $n\geq 1$, а $\{p_i\}$ - простые.\ 
+
+    При этом, если $r=q_1\dots q_m$ - другое такое разложение, то $m=n$ и существует перестановка индексов $\pi: n\rightarrow n$, такая, что $p_i\sim q_{\pi_i}$ для всех $i$.
+\end{theorem}
+
+\begin{proof}
+    Докажем существование. Зафиксируем $x$. Если он неприводимый, то он и простой по определению факториального кольца, поэтому сам будет своим подходящим разложением. Пусть $x=yz$, где $y, z \nsim 1$.Если $y$ необратим и приводим, разложим и его: $y=y_1 z_1$, где $y_1, z_1 \nsim 1$. Будем раскладывать так игреки, пока можем, и получим строго возрастающую цепочку идеалов $(y)\subsetneq(y_1)\subsetneq(y_2)\subsetneq\dots$ Вспомним нетёровость нашего кольца: бесконечно возрастать она не может, значит, на каком-то моменте заработаем для $x$ один не приводимый делитель $p: x=pw$ для какого-то $w$. Если $w$ необратим и приводим, разложим и его: $w=p_1 w_1$. Продолжим и получим ещё одну возрастающую цепочку идеалов: $(x)\subsetneq (w)\subsetneq (w_1)\subsetneq \dots$ К тому времени, когда она оборвётся, у нас будет разложение $x$ в конечное произведение неприводимых: $x=p_1\dots p_n$. Существование доказано.\ 
+
+    Теперь перейдём к доказательству единственности. Разложим двумя способами: $r=p_1\dots p_n=q_1\dots q_m$. По индукции пожно вывести из определения простого, что\\
+
+    \begin{lemma}
+        Если $p$ - простой и $p\vert a_1\dots a_n$, то $p\vert a_i$ для какого-то $i$.
+    \end{lemma}\
+
+    Воспользуемся этим фактом:например, мы теперь знаем: что $q_m\vert p_i$ для какого-то $i$. Но $p_i$ неприводим, поэтому любой его делитель либо обратим, либо ассоциирован с ним. $q_m$ не боратим, так как он простой; значит, $q_m \sim p_i$. Переставим $p_i$ и $p_n$ и считаем, что $q_m$ теперь $\sim p_n$. Осталось вывести следующий факт:\\
+
+    \begin{lemma}
+        Пусть $a\sim b$, $ac\sim bd$, а $b\neq 0$. Тогда $c\sim d$.
+    \end{lemma}
+
+    \begin{proof}
+        $a=\varepsilon b$и $ac=\varepsilon bc =\nu bd$ для каких-то обратимых $\varepsilon$ и $\nu$. Последнее равенство можем сократить на $b\neq 0$, потому что мы в области.
+    \end{proof}
+
+    Теперь $p_1\dots p_{n-1}\sim q_1\dots q_{m-1}$. Можем теперь сказать, что равенство $p_1\dots p_{n-1} = q_1\dots q_{m-1}$ верно по предположению индукции по $n$. Так же по индукции $n=m$, потому что получим противоречие, если какая-то из серий сомножителей $\{p_i\}$, $\{q_i\}$ закончится раньше.
+\end{proof}
+
+\begin{exl}
+    Обыкновенное кольцо $\mathbb{Z}$ $\in$ евклидовы кольца $\subset$ ОГИ $\subset$ факториальные кольца.
+\end{exl}
+
+\resetall
 
 \subsection{Кольцо вычетов $\mathbb{Z}/_{n\mathbb{Z}}$. Китайская теорема об остатках}
 
@@ -326,6 +459,8 @@
     \hyperlink{n3}{делитель нуля}\
 
     \hyperlink{n5}{евклидово кольцо}\
+
+    \hyperlink{n9}{идеал}\
     
     \hyperlink{n1}{кольцо, а также его вариации}\
 
@@ -333,9 +468,17 @@
 
     \hyperlink{n6}{НОД}\
 
+    \hyperlink{n10}{ОГИ}\
+
+    \hyperlink{n13}{ОТА}\
+
     \hyperlink{n2}{область целостности}\
 
     \hyperlink{n8}{простые}\ 
+
+    \hyperlink{n11}{УОВЦГИ}\
+
+    \hyperlink{n12}{факториальность}\
     
 
 \end{multicols}
