--- a/algebruh/algebra.tex
+++ b/algebruh/algebra.tex
@@ -236,7 +236,21 @@
     Пусть $d$ - какой-то делитель $p$, что эквивалентно равенству $p=da$ для какого-то $a$. Проверим, что либо $d\sim 1$, либо $d\sim p$. Раз $p$ - простой, то либо он делит $d$, либо он делит $a$. Если первое, что сразу $d\sim p$.Если второе, перепишем в виде $da=p\vert a$. Это то же самое, что $bda=a$ для некоторого $b$. Здесь либо $a=0$, то тогда $p=o$, что невозможно по определению простого, либо мы можем сократить на $a$ и получим $bd=1$, тогда $d$ ассоциирован с 1.
 \end{proof}
 
-Смотрите ткаже \hyperlink{t1}{немного добавки} про простые и неприводимые после введения ОГИ.
+Теперь немного добавки про простые и неприводимые, на всякий случай.\\
+
+\begin{lemma}
+    (Неприводимые $\subset$ простые в ОГИ). Пусть $p$ - неприводимый в области главных идеалов. Тогда $p$ - простой.
+\end{lemma}
+
+\begin{proof}
+    Пусть $p\vert ab$, хотим показать, что $p\vert a \vee p\vert b$. Воспользуемся тем, что мы в области главных идеалов: $(p,a)=(d)$, где $d:=\gcd (a, p)$, а тогда $px+ay=d$ для каких-то $x, y$. $d\vert p$, воспользуемся неприводимостью $p$: либо $d\sim p$, либо $d\sim 1$.\
+    
+    В первом случае $p\vert d$, тогда $p\vert d\vert a$.\
+
+    Во втором случае можно после домножения на обратимые считать, что $px+ay=1$. Потом домножим на $b:pbx+aby=b$. $p$ явно делит первое слагаемое, ровно как и второе (по предположению). Значит, $p\vert b$.\
+
+    В любом случае, приходим к желаемому.
+\end{proof}
 
 \resetall
 
@@ -284,22 +298,6 @@
     \textcolor{red}{$\Rightarrow$} Легко видеть, что $(d) \subset I$.\
 
     \textcolor{red}{$\Leftarrow$} Пусть $a \in I$, тогда поделим $a$ на $b$ с остатком: $a=bd+r$. Предположим, $r\neq 0$, $N(r)<N(d)$. Выразим $r$ линейной комбинацией $a\in I$ и $d \in I$: $r=a-bd\in I$ - противоречие с минимальностью нормы $d$. Значит, $r=0$, а тогда $a=bd\in (d)$.
-\end{proof}
-
-Теперь \hypertarget{t1}{немного добавки} про простые и неприводимые, на всякий случай.\\
-
-\begin{lemma}
-    (Неприводимые $\subset$ простые в ОГИ). Пусть $p$ - неприводимый в области главных идеалов. Тогда $p$ - простой.
-\end{lemma}
-
-\begin{proof}
-    Пусть $p\vert ab$, хотим показать, что $p\vert a \vee p\vert b$. Воспользуемся тем, что мы в области главных идеалов: $(p,a)=(d)$, где $d:=\gcd (a, p)$, а тогда $px+ay=d$ для каких-то $x, y$. $d\vert p$, воспользуемся неприводимостью $p$: либо $d\sim p$, либо $d\sim 1$.\
-    
-    В первом случае $p\vert d$, тогда $p\vert d\vert a$.\
-
-    Во втором случае можно после домножения на обратимые считать, что $px+ay=1$. Потом домножим на $b:pbx+aby=b$. $p$ явно делит первое слагаемое, ровно как и второе (по предположению). Значит, $p\vert b$.\
-
-    В любом случае, приходим к желаемому.
 \end{proof}
 
 \resetall
@@ -377,7 +375,82 @@
 
 \subsection{Кольцо вычетов $\mathbb{Z}/_{n\mathbb{Z}}$. Китайская теорема об остатках}
 
+\begin{exl}
+    Множество $\mathbb{Z}/_{n\mathbb{Z}} = \{[0], \dots, [n-1]\}$ остатков при делении на $n\in \mathbb{N}$ - коммутативное кольцо с единицей. \hypertarget{n14}{\textcolor{red}{\textit{Кольцо вычетов}}} (остатков) по модулю.
+\end{exl}
+
+\begin{defn}
+    $m$, $n$ \textit{взаимно просты}, если $(m,n)=(1)=R$.
+\end{defn}
+
+\begin{lemma}
+    Пусть $R$ - факториальное кольцо, $m, n\in R$ - взаимно простые элементы. Пусть, к тому же, $m$ и $n$ - делители $r:m,n\vert r$. Тогда их произведение тоже делит $r:mn\vert r$.
+\end{lemma}
+
+\begin{proof}
+    Можно вывести из ОТА.
+\end{proof}
+
+\begin{theorem}
+    (\hypertarget{n15}{\textcolor{red}{\textit{Китайская теорема об остатках}}}). Если $(m,n)=(1)$, то $\mathbb{Z}/(m)\times \mathbb{Z}/(n)\cong \mathbb{Z}/(mn)$.
+\end{theorem}
+
+\begin{proof}
+    Пусть $x$ - классы, соответствующие числу $x$ в $\mathbb{Z}/(m)$ и $\mathbb{Z}/(n)$, соответственно. Рассмотрим гомеоморфизм $f=x\mapsto ([x]_m, [x]_n)$.\ 
+
+    Его ядро - числа, которые делятся и на $m$, и на $n$, а поскольку они взаимно просты, то и на $mn$. Значит, $\text{Ker} f= (mn)$.\ 
+
+    Проверим $f$ на сюръективность. Для этого просто хитро покажем, что $\text{Im} f \cong \mathbb{Z}/(mn)$. Тогда $mn = \vert \mathbb{Z}/(mn)\vert = \vert \text{Im} f\vert$. При этом $\text{Im} f \subset \mathbb{Z}/(m)\times \mathbb{Z}/(n)$ по определению (подкольцо) и $\vert \mathbb{Z}/(m)\times \mathbb{Z}/(n) \vert = mn$ простым подсчётом, откуда следует, что $\text{Im}=\mathbb{Z}/(m)\times \mathbb{Z}/(n)$.
+\end{proof}
+
+\begin{cons}
+    $\mathbb{Z}/(n)$ - область целостности $\Longleftrightarrow$ $n$ - простое.
+\end{cons}
+
+\resetall
+
 \subsection{Определение поля. $\mathbb{Z}/_{p\mathbb{Z}}$ как поле. Поле частных целостного кольца}
+
+Напомним ещё раз определение поля.\
+
+\begin{defn}
+    \hypertarget{n16}{\textcolor{red}{\textit{Поле}}} - коммутативное кольцо с единицей, в котором также существует обратный элемент по умножению для ненулевых элементов.
+\end{defn}
+
+\begin{exl}
+    $\mathbb{Z}/_{p\mathbb{Z}}$ - поле.
+\end{exl}
+
+\begin{proof}
+    Мы уже много чего знаем про эту структуру (см. конец предыдущего билета). Для доказательства вышеприведённого факта нужно показать, что у каждого элемента есть обратный по умножению (кроме, конечно, нуля). Рассмотрим ненулевой элемент $a$, и умножим его на все остатки по модулю $p$, получим $\{0a, 1a, \dots, (p-1)a\}$. Заметим, что все полученные остатки различны. Предположим противное: $ka\equiv ma \Leftrightarrow (k-m)a\equiv 0$, но так как мы находимся в области, то либо $a=0$ (сразу нет), либо $k-m=0$, но так как они оба меньше $p$, то такого тоже, очевидно, не бывает. Тогда мы получили, что все остатки, полученные таким образом, различны. Но так как их ровно $p$, то найдётся и равный 1, элемент на который мы умножаем в том случае и будет обратным к $a$.
+\end{proof}
+
+В общем и целом, мы сейчас будем получать что-то вроде $\mathbb{Q}$, но над любым кольцом $R$. Введём отношение $\sim$ на множестве пар $R\times (R\backslash 0)$. Пусть $(a, b)\sim(a', b') \Leftrightarrow ab'=a'b$. Проверим, что мы получили отношение эквивалентности:
+
+\begin{proof}
+    Нужно показать рефлексивность, симметричность и транзитивность. Первые два утверждения очевидны, покажем последнее. Пусть $(a, b)\sim(a', b')$ и $(a', b')\sim(a", b")$, мы хотим показать, что $(a, b)\sim(a", b")$, то есть, $ab"=a"b$. Воспользуемся тем, что мы находимся в области целостности - домножим левую часть последнего равенства на ненулевой $b'$ и преобразуем, используя гипотезы:
+    \[
+        (ab')b"=b(a'b")=bb'a".
+    \]
+    Теперь сократим на $b"$.
+\end{proof}
+
+\begin{defn}
+    Фактор $R/\sim$ называется \hypertarget{n18}{\textcolor{red}{\textit{полем частных}}} области целостности $R$ и обозначается за $\text{Frac}R$. Элементы будем обозначать дробями.
+\end{defn}
+
+Сложение и умножение определяется как в обычной жизни. Осталось проверить, что это действительно поле.
+
+\begin{proof} Нужно выполнить совсем немного проверок: \
+    \begin{itemize}
+        \item $0\over 1$ - нуль;
+        \item $1\over 1$ - единица;
+        \item $\frac{-a}{b}$ - обратный к $\frac{a}{b}$ по сложению;
+        \item $\frac{b}{a}$ - обратный к $\frac{a}{b}$ по умножению для ненулевых.
+    \end{itemize}
+\end{proof}
+
+\resetall
 
 \subsection{Определение гомоморфизма и изоморфизма колец. Фактор-кольцо}
 
@@ -464,6 +537,10 @@
     
     \hyperlink{n1}{кольцо, а также его вариации}\
 
+    \hyperlink{n14}{кольцо вычетов}\
+
+    \hyperlink{n15}{КТО}\
+
     \hyperlink{n7}{неприводимые}\
 
     \hyperlink{n6}{НОД}\
@@ -473,6 +550,10 @@
     \hyperlink{n13}{ОТА}\
 
     \hyperlink{n2}{область целостности}\
+
+    \hyperlink{n16}{поле}\
+
+    \hyperlink{n18}{поле частных}\
 
     \hyperlink{n8}{простые}\ 
 
